--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,34 @@
-.header h2{
-    display: block;
+.header {
+    margin-top: 50px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.header-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+.header-right {
+    display: flex;
+    flex-direction: column;
+    height: 350px;
+    width: 200px;
+    color: white;
+    border: 1px solid green;
+    padding: 10px;
+}
+.header a:hover {
+    color: white;
+}
+.header img {
+    border-radius: 50%;
+}
+
+.header a {
+    margin-right: 20px;
+    padding: 10px 0 10px 0;
+    color: black;
 }
