added comments to posts

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,7 +1,3 @@
 .navbar {
-    display: flex;
-    flex-direction: row;
-}
-.navbar .navbar-nav {
-    align-items: center;
+    margin-bottom: 50px
 }
