--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: darkslategray;
 }
+h1, h2, h3 {
+  color: white;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
